# idea-input-switch

./: .gitignore  Cargo.toml  IdeaIME_设计文档.md  README.md  build.rs  config.json
UrlSender/: README.md  background.js  config.js  manifest.json  popup.css  popup.html  popup.js
src/: autostart.rs  char_alias.rs  config.rs  hook.rs  http_server.rs  ime.rs  logging.rs  main.rs  notify.rs  tray.rs  watcher.rs
src/ime/: microsoft.rs  mod.rs  sogou.rs  win32.rs
